peer-authen.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: peer-policy
  namespace: new
spec:
  mtls:
    mode: STRICT
