peer-authen2.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: peer-policy2
  namespace: nginx-apps
spec:
  mtls:
    mode: STRICT
