curlpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curlpod
  namespace: new
spec:
  containers:
  - name: curl
    image: curlimages/curl:latest
    command: [ "sleep", "3600" ]
