sleep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep
  namespace: new
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sleep
  template:
    metadata:
      labels:
        app: sleep
    spec:
      serviceAccountName: sleep
      containers:
      - name: sleep
        image: curlimages/curl:7.85.0
        command: ["/bin/sh", "-c", "sleep 3650d"]
