dest-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: bookapp-destination
  namespace: new
spec:
  host: "*.new.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
